# LocalLibrary

./: .gitignore  README.md  pyproject.toml  requirements.txt  tutorial.md
locallibrary/: .coverage  README.md  db.sqlite3
locallibrary/catalog/: admin.py  forms.py  models.py  urls.py  views.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_bookinstance_borrower.py  0003_alter_bookinstance_options.py  0004_alter_book_options.py
locallibrary/catalog/templates/: base_generic.html  index.html
locallibrary/catalog/templates/catalog/: all-borrowed.html  author_confirm_delete.html  author_detail.html  author_list.html  book_confirm_delete.html  book_detail.html  book_form.html  book_list.html  bookinstance_list_borrowed_user.html
locallibrary/catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/locallibrary/: settings.py  urls.py
locallibrary/staticfiles/: staticfiles.json
locallibrary/templates/registration/: logged_out.html  login.html  password_reset_form.html
