[tool.poetry]
name = "library_app"
version = "0.1.0"
description = ""
authors = ["Kassie Bradshaw <kassie.r.bradshaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
coverage = "^6.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
